# stack

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: commands.rs  config.rs  exec.rs  main.rs  program.rs
